--- a/YellowstonePathology/UI/Surgical/TypingWorkspace.xaml
+++ b/YellowstonePathology/UI/Surgical/TypingWorkspace.xaml
@@ -93,7 +93,7 @@
                 </Button>
             </StackPanel>
 
-            <TextBox Grid.Column="3" Grid.Row="1" Text="{Binding Path=AccessionOrder.CollectionDate, Converter={StaticResource ShortDateConverter}, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Center" Margin="2,2,30,2"/>
+            <TextBox Grid.Column="3" Grid.Row="1" Text="{Binding Path=AccessionOrder.CollectionDate, Converter={StaticResource ShortDateConverter}}" VerticalAlignment="Center" Margin="2,2,30,2"/>
 			<TextBlock Grid.Column="3" Grid.Row="2" Text="{Binding Path=AccessionOrder.AccessionDate, Converter={StaticResource ShortDateConverter}}" VerticalAlignment="Center" Margin="2,2,2,2"></TextBlock>
 
 			<ComboBox Name="ComboBoxAcceptingUsers" VerticalContentAlignment="Center" IsEnabled="{Binding Path=FieldEnabler.IsUnprotectedEnabled}" VerticalAlignment="Center"
@@ -178,7 +178,7 @@
                     <TextBox Grid.Column="1" Grid.Row="2" Text="{Binding Path=AccessionOrder.PLastName, Converter={StaticResource UpperCaseConverter}, UpdateSourceTrigger=PropertyChanged}" IsEnabled="{Binding Path=FieldEnabler.IsProtectedEnabled}" Style="{StaticResource NewTextBox}" Width="200" HorizontalAlignment="Left"></TextBox>
                     <TextBox Grid.Column="1" Grid.Row="3" Text="{Binding Path=AccessionOrder.PFirstName, Converter={StaticResource UpperCaseConverter}, UpdateSourceTrigger=PropertyChanged}" IsEnabled="{Binding Path=FieldEnabler.IsProtectedEnabled}" Style="{StaticResource NewTextBox}" Width="200" HorizontalAlignment="Left"></TextBox>
                     <TextBox Grid.Column="1" Grid.Row="4" Text="{Binding Path=AccessionOrder.PMiddleInitial, Converter={StaticResource UpperCaseConverter}, UpdateSourceTrigger=PropertyChanged}" IsEnabled="{Binding Path=FieldEnabler.IsProtectedEnabled}" Style="{StaticResource NewTextBox}" Width="200" HorizontalAlignment="Left"></TextBox>
-                    <TextBox Grid.Column="1" Grid.Row="5" Text="{Binding Path=AccessionOrder.PBirthdate, Converter={StaticResource ShortDateConverter}, UpdateSourceTrigger=PropertyChanged}" IsEnabled="{Binding Path=FieldEnabler.IsProtectedEnabled}" Style="{StaticResource NewTextBox}" Width="200" HorizontalAlignment="Left"></TextBox>
+                    <TextBox Grid.Column="1" Grid.Row="5" Text="{Binding Path=AccessionOrder.PBirthdate, Converter={StaticResource ShortDateConverter}}" IsEnabled="{Binding Path=FieldEnabler.IsProtectedEnabled}" Style="{StaticResource NewTextBox}" Width="200" HorizontalAlignment="Left"></TextBox>
 
 					<ComboBox Grid.Column="1" Grid.Row="6" Text="{Binding Path=AccessionOrder.PSex}" Width="50" 
 							Style="{StaticResource NewComboBox}" IsEnabled="{Binding Path=FieldEnabler.IsUnprotectedEnabled}">
@@ -446,7 +446,7 @@
 																		Margin="3" MinWidth="150">
 															</ComboBox>
 
-                                                            <TextBox Text="{Binding Path=StartDate, UpdateSourceTrigger=PropertyChanged}" Width="120" HorizontalAlignment="Stretch"
+                                                            <TextBox Text="{Binding Path=StartDate}" Width="120" HorizontalAlignment="Stretch"
 																		Height="20" Margin="2,2,2,2">
 																<TextBox.Style>
 																	<Style TargetType="TextBox">
@@ -465,7 +465,7 @@
 																</TextBox.Style>
 															</TextBox>
 
-                                                            <TextBox Text="{Binding Path=EndDate, UpdateSourceTrigger=PropertyChanged}" Width="120" HorizontalAlignment="Stretch"
+                                                            <TextBox Text="{Binding Path=EndDate}" Width="120" HorizontalAlignment="Stretch"
 																		Height="20" Margin="2,2,2,2">
 																<TextBox.Style>
 																	<Style TargetType="TextBox">
