--- a/YellowstonePathology/UI/Surgical/TypingWorkspace.xaml
+++ b/YellowstonePathology/UI/Surgical/TypingWorkspace.xaml
@@ -186,7 +186,7 @@
 						<ComboBoxItem>M</ComboBoxItem>
 					</ComboBox>
 
-                    <TextBox Grid.Column="1" Grid.Row="7" Text="{Binding Path=AccessionOrder.PSSN, Converter={StaticResource SocialSecurityNumberConverter}, UpdateSourceTrigger=PropertyChanged}" 
+                    <TextBox Grid.Column="1" Grid.Row="7" Text="{Binding Path=AccessionOrder.PSSN, Converter={StaticResource SocialSecurityNumberConverter}}" 
                    Style="{StaticResource NewTextBox}" Width="200" HorizontalAlignment="Left" IsEnabled="{Binding Path=FieldEnabler.IsUnprotectedEnabled}"></TextBox>
 
 					<ComboBox Grid.Column="1" Grid.Row="8" Width="100" Style="{StaticResource NewComboBox}" IsEnabled="{Binding Path=FieldEnabler.IsBillingAuditEnabled}">
