--- a/YellowstonePathology/UI/EmbeddingDialog.xaml
+++ b/YellowstonePathology/UI/EmbeddingDialog.xaml
@@ -10,7 +10,6 @@
                 
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"></ColumnDefinition>
-            <ColumnDefinition Width="*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"></RowDefinition>
@@ -34,33 +33,25 @@
             </Button>
         </StackPanel>
 
-        <ComboBox Grid.Column="1" Grid.Row="0" Name="ComboBoxProcessorRuns" ItemsSource="{Binding Path=ProcessorRunCollection}" DisplayMemberPath="Name" Margin="2,2,2,2"
-                  Width="200" HorizontalAlignment="Right">
-        </ComboBox>
+        <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="0" HorizontalAlignment="Right">
+            <Button Width="150" Margin="2,2,2,2" Click="ButtonUpdate_Click">Update</Button>
+            <ComboBox  Name="ComboBoxProcessorRuns" ItemsSource="{Binding Path=ProcessorRunCollection}" DisplayMemberPath="Name" Margin="2,2,2,2" Width="200">
+            </ComboBox>
+        </StackPanel>
+        
 
-        <ListView Name="ListViewAliquotOrders" Grid.Column="0" Grid.Row="1" Margin="2,2,2,2" ItemsSource="{Binding Path=AliquotOrderCollection}">
+        <ListView Name="ListViewEmbeddingScans" Grid.Column="0" Grid.Row="1" Margin="2,2,2,2" ItemsSource="{Binding Path=EmbeddingScanCollection}">
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="Block" Width="100" DisplayMemberBinding="{Binding Path=AliquotOrderId}" />
-                    <GridViewColumn Header="Label" Width="100" DisplayMemberBinding="{Binding Path=Label}" />
-                    <GridViewColumn Header="Gross" Width="130" DisplayMemberBinding="{Binding Path=GrossVerifiedDate}" />
-                    <GridViewColumn Header="By" Width="100" DisplayMemberBinding="{Binding Path=GrossVerifiedBy}" />
-                    <GridViewColumn Header="Embedded" Width="130" DisplayMemberBinding="{Binding Path=EmbeddingVerifiedDate}" />
-                    <GridViewColumn Header="By" Width="100" DisplayMemberBinding="{Binding Path=EmbeddingVerifiedBy}" />
+                    <GridViewColumn Header="Date" Width="130" DisplayMemberBinding="{Binding Path=DateScanned}" />
+                    <GridViewColumn Header="Processor" Width="200" DisplayMemberBinding="{Binding Path=ProcessorRun}" />
+                    <GridViewColumn Header="By" Width="150" DisplayMemberBinding="{Binding Path=ScannedBy}" />
+                    <GridViewColumn Header="Updated" Width="120" DisplayMemberBinding="{Binding Path=Updated}" />
                 </GridView>
             </ListView.View>
         </ListView>
 
-        <ListView Name="ListViewSpecimenOrders" Grid.Column="1" Grid.Row="1" Margin="2,2,2,2" ItemsSource="{Binding Path=SpecimenOrderCollection}">
-            <ListView.View>
-                <GridView>
-                    <GridViewColumn Header="Master Accession" Width="100" DisplayMemberBinding="{Binding Path=MasterAccessionNo}" />
-                    <GridViewColumn Header="Description" Width="250" DisplayMemberBinding="{Binding Path=Description}" />
-                    <GridViewColumn Header="Processor" Width="200" DisplayMemberBinding="{Binding Path=ProcessorRun}" />
-                </GridView>
-            </ListView.View>
-        </ListView>
-        
         <ListView Name="ListViewHoldList" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="2" Margin="2,2,2,2" ItemsSource="{Binding Path=SpecimenOrderHoldCollection}">
             <ListView.ContextMenu>
                 <ContextMenu>
