--- a/YellowstonePathology/UI/Test/ROS1ResultPage.xaml
+++ b/YellowstonePathology/UI/Test/ROS1ResultPage.xaml
@@ -103,7 +103,7 @@
 
                     <TextBlock Grid.Column="0" Grid.Row="0" Margin="2,2,2,2" FontWeight="Bold">Result:</TextBlock>
                     <ComboBox Name="ComboBoxResult" Grid.Column="1" Grid.Row="0" Margin="2,2,2,2" ItemsSource="{Binding Path=ResultCollection}" DisplayMemberPath="ResultDisplayText" 
-							  SelectedValue="{Binding Path=ROS1ByFISHTestOrder.Result}" SelectedValuePath="Result" HorizontalAlignment="Stretch"/>
+							  SelectedValue="{Binding Path=ROS1ByFISHTestOrder.ResultCode}" SelectedValuePath="ResultCode" HorizontalAlignment="Stretch"/>
                     
                     <TextBlock Grid.Column="0" Grid.Row="1" Margin="2,2,2,2" FontWeight="Bold">Ordered On:</TextBlock>
                     <TextBlock Grid.Column="1" Grid.Row="1" Margin="2,2,2,2" Text="{Binding Path=OrderedOnDescription}"></TextBlock>                                                            
