--- a/YellowstonePathology/UI/MySql/MySqlMigrationDialog.xaml
+++ b/YellowstonePathology/UI/MySql/MySqlMigrationDialog.xaml
@@ -16,11 +16,12 @@
         </Grid.RowDefinitions>
 
         <Menu Name="MainMenu" Grid.Column="0" Grid.Row="0" DockPanel.Dock="Top">
-            <MenuItem Header="Get Status" Click="MenuItemGetStatus_Click"></MenuItem>
-            <MenuItem Header="Create Table" Click="MenuItemCreateTable_Click"></MenuItem>
-            <MenuItem Header="Add Transfer Column" Click="MenuItemAddTransferColumn_Click"></MenuItem>
-            <MenuItem Header="Load Data" Click="MenuItemLoadData_Click"></MenuItem>
-            <MenuItem Header="Synchronize Data" Click="MenuItemSynchronizeData_Click"></MenuItem>
+            <MenuItem Header="Get Status" Click="MenuItemGetStatus_Click" Margin="5"></MenuItem>
+            <MenuItem Header="Create Table" Click="MenuItemCreateTable_Click" Margin="5"></MenuItem>
+            <MenuItem Header="Add Transfer Column" Click="MenuItemAddTransferColumn_Click" Margin="5"></MenuItem>
+            <MenuItem Header="Add Timestamp Column" Click="MenuItemAddTimestampColumn_Click" Margin="5"></MenuItem>
+            <MenuItem Header="Load Data" Click="MenuItemLoadData_Click" Margin="5"></MenuItem>
+            <MenuItem Header="Synchronize Data" Click="MenuItemSynchronizeData_Click" Margin="5"></MenuItem>
         </Menu>
 
         <StackPanel Grid.Column="0" Grid.Row="1" Orientation="Horizontal">
@@ -39,6 +40,7 @@
                     <GridViewColumn DisplayMemberBinding="{Binding Path=KeyFieldName, Mode=OneWay}" Header="Key Field" Width="150"/>
                     <GridViewColumn DisplayMemberBinding="{Binding Path=HasTable}" Header="Has MySql Table" Width="100"/>
                     <GridViewColumn DisplayMemberBinding="{Binding Path=HasTransferredColumn}" Header="Has Transferred Col" Width="130"/>
+                    <GridViewColumn DisplayMemberBinding="{Binding Path=HasTimestampColumn}" Header="Has Timestamp Col" Width="130"/>
                     <GridViewColumn DisplayMemberBinding="{Binding Path=UnLoadedDataCount}" Header="Unmigrated Count" Width="120"/>
                     <GridViewColumn DisplayMemberBinding="{Binding Path=OutOfSyncCount}" Header="Unsynced Count" Width="100"/>
                 </GridView>
