--- a/YellowstonePathology/UI/EmbeddingDialog.xaml
+++ b/YellowstonePathology/UI/EmbeddingDialog.xaml
@@ -53,20 +53,36 @@
             </ListView.View>
         </ListView>
 
-        <ListView Name="ListViewHoldList" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="2" Margin="2,2,2,2" ItemsSource="{Binding Path=SpecimenOrderHoldCollection}">
-            <ListView.ContextMenu>
-                <ContextMenu>
-                    <MenuItem Tag="{Binding}" Header="Remove Hold" Click="ContextMenuRemoveHold_Click"></MenuItem>
-                </ContextMenu>
-            </ListView.ContextMenu>
-            <ListView.View>
-                <GridView>
-                    <GridViewColumn Header="Master Accession" Width="100" DisplayMemberBinding="{Binding Path=MasterAccessionNo}" />
-                    <GridViewColumn Header="Description" Width="500" DisplayMemberBinding="{Binding Path=Description}" />
-                </GridView>
-            </ListView.View>
-        </ListView>
+        <TabControl Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="2">
+            <TabItem Header="On Hold">
+                <ListView Name="ListViewHoldList" Margin="2,2,2,2" ItemsSource="{Binding Path=SpecimenOrderHoldCollection}">
+                    <ListView.ContextMenu>
+                        <ContextMenu>
+                            <MenuItem Tag="{Binding}" Header="Remove Hold" Click="ContextMenuRemoveHold_Click"></MenuItem>
+                        </ContextMenu>
+                    </ListView.ContextMenu>
+                    <ListView.View>
+                        <GridView>
+                            <GridViewColumn Header="Master Accession" Width="100" DisplayMemberBinding="{Binding Path=MasterAccessionNo}" />
+                            <GridViewColumn Header="Description" Width="500" DisplayMemberBinding="{Binding Path=Description}" />
+                        </GridView>
+                    </ListView.View>
+                </ListView>
+            </TabItem>
+            <TabItem Header="Not Scanned">
+                <ListView Name="ListViewNotScannedList" Margin="2,2,2,2" ItemsSource="{Binding Path=EmbeddingNotScannedList}">
+                    <ListView.View>
+                        <GridView>
+                            <GridViewColumn Header="ID" Width="100" DisplayMemberBinding="{Binding Path=AliquotOrderId}" />
+                            <GridViewColumn Header="Test" Width="100" DisplayMemberBinding="{Binding Path=PanelSetName}" />
+                            <GridViewColumn Header="Description" Width="500" DisplayMemberBinding="{Binding Path=Description}" />
+                        </GridView>
+                    </ListView.View>
+                </ListView>
+            </TabItem>
 
+        </TabControl>
+        
         <StatusBar Grid.Column="0" Grid.Row="3">
             <StatusBarItem>
                 <TextBlock Name="TextBlockStatus" Margin="2,2,2,2" TextAlignment="Left" VerticalAlignment="Center" Width="300" Text="{Binding Path=StatusMessage}"></TextBlock>
