--- a/YellowstonePathology/UI/MaterialTracking/FedXTrackingPage.xaml
+++ b/YellowstonePathology/UI/MaterialTracking/FedXTrackingPage.xaml
@@ -18,14 +18,15 @@
         <Grid Grid.Row="0">
             
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto"></ColumnDefinition>
                 <ColumnDefinition Width="*"></ColumnDefinition>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"></RowDefinition>
             </Grid.RowDefinitions>
 
-        </Grid>	        
+            <TextBox Grid.Column="0" Grid.Row="0"  Grid.ColumnSpan="2" Margin="2,2,2,2" TextWrapping="Wrap" AcceptsReturn="True" Text="{Binding Path=TrackingResult}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
+
+        </Grid>	                
         
         <Grid Grid.Row="1">
 			<Grid.ColumnDefinitions>
@@ -36,9 +37,9 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"></RowDefinition>
             </Grid.RowDefinitions>
-            
+
             <Border Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="3" BorderBrush="Transparent" BorderThickness="0" Background="{DynamicResource {x:Static SystemColors.InactiveCaptionBrushKey}}"></Border>                        
-            <Button Grid.Column="2" Grid.Row="0" Name="ButtonClose" Margin="5,5,5,5" Click="ButtonClose_Click" Width="100" Height="40" Content="Close" HorizontalAlignment="Right"/>
+            <Button Grid.Column="2" Grid.Row="0" Name="ButtonNext" Margin="5,5,5,5" Click="ButtonNext_Click" Width="100" Height="40" Content="Next" HorizontalAlignment="Right"/>
             
         </Grid>
         
