--- a/YellowstonePathology/UI/AdministrationWorkspace.xaml
+++ b/YellowstonePathology/UI/AdministrationWorkspace.xaml
@@ -85,6 +85,7 @@
         <Button Click="ButtonRunShowTemplatePage_Click" Width="200" Height="30" Margin="5,5,5,5">Show Template Page</Button>
 
         <Button Click="ButtonRunMethod_Click" Width="200" Height="30" Margin="5,5,5,5">Run Method</Button>
+        <Button Click="ButtonWilliamTesting_Click" Width="200" Height="30" Margin="5,5,5,5">William Testing</Button>
 
 
     </WrapPanel>                
