--- a/YellowstonePathology/UI/Client/ClientEntry.xaml
+++ b/YellowstonePathology/UI/Client/ClientEntry.xaml
@@ -29,6 +29,7 @@
 						<RowDefinition Height="Auto"></RowDefinition>
 						<RowDefinition Height="Auto"></RowDefinition>
 						<RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="Auto"></RowDefinition>
 						<RowDefinition Height="Auto"></RowDefinition>
 						<RowDefinition Height="Auto"></RowDefinition>
 						<RowDefinition Height="Auto"></RowDefinition>
@@ -97,7 +98,11 @@
 
 					<TextBlock Grid.Column="0" Grid.Row="14" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right" >Show Physicians:</TextBlock>
 					<CheckBox Grid.Column="1" Grid.Row="14" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Left" IsChecked="{Binding Path=Client.ShowPhysiciansOnRequisition}" />
-				</Grid>
+
+                    <TextBlock Grid.Column="0" Grid.Row="15" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right" >Notification Email:</TextBlock>
+                    <TextBox Grid.Column="1" Grid.Row="15" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="{Binding Path=Client.AdditionalTestingNotificationEmail}" />
+
+                </Grid>
 			</TabItem>
 			
 			<TabItem Header="Membership">
