--- a/YellowstonePathology/UI/Cytology/CytologyResultsWorkspace.xaml
+++ b/YellowstonePathology/UI/Cytology/CytologyResultsWorkspace.xaml
@@ -226,6 +226,7 @@
 									<ColumnDefinition Width="Auto"></ColumnDefinition>
                                     <ColumnDefinition Width="Auto"></ColumnDefinition>
                                     <ColumnDefinition Width="Auto"></ColumnDefinition>
+                                    <ColumnDefinition Width="Auto"></ColumnDefinition>
                                 </Grid.ColumnDefinitions>
 								<Grid.RowDefinitions>
 									<RowDefinition></RowDefinition>
@@ -237,9 +238,10 @@
 								<TextBlock Grid.Column="0" Grid.Row="1" Text="Accepted Date:" Margin="2" FontWeight="Bold"/>
 								<TextBlock Grid.Column="1" Grid.Row="1" Text="{Binding Path=AcceptedTime, Converter={StaticResource ShortDateTimeConverter}}" Margin="2" FontWeight="Bold"/>
 
-                                <Button  Grid.Column="2" Grid.Row="1" Height="20" Width="60" Margin="2,2,2,2" ToolTip="Delete Dot Review" Click="ButtonAcidWashAccept_Click"  HorizontalAlignment="Right">Accept</Button>
-                                <Button  Grid.Column="3" Grid.Row="1" Height="20" Width="60" Margin="2,2,2,2" ToolTip="Delete Dot Review" Click="ButtonAcidWashUnaccept_Click"  HorizontalAlignment="Right">Unaccept</Button>
-                                <Button  Grid.Column="4" Grid.Row="1" Height="20" Width="60" Margin="2,2,2,2" ToolTip="Delete Dot Review" Click="ButtonAcidWashDelete_Click" HorizontalAlignment="Right">Delete</Button>
+                                <Button Grid.Column="2" Grid.Row="1" Height="20" Width="60" Margin="2,2,2,2" Click="ButtonAcidWashQNS_Click"  HorizontalAlignment="Right">QNS</Button>
+                                <Button Grid.Column="3" Grid.Row="1" Height="20" Width="60" Margin="2,2,2,2" Click="ButtonAcidWashAccept_Click"  HorizontalAlignment="Right">Accept</Button>
+                                <Button Grid.Column="4" Grid.Row="1" Height="20" Width="60" Margin="2,2,2,2" Click="ButtonAcidWashUnaccept_Click"  HorizontalAlignment="Right">Unaccept</Button>
+                                <Button Grid.Column="5" Grid.Row="1" Height="20" Width="60" Margin="2,2,2,2" Click="ButtonAcidWashDelete_Click" HorizontalAlignment="Right">Delete</Button>
                             </Grid>
 						</Border>
 					</Grid>
