--- a/YellowstonePathology/UI/Test/AcidWashOrdersDialog.xaml
+++ b/YellowstonePathology/UI/Test/AcidWashOrdersDialog.xaml
@@ -4,8 +4,18 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:YellowstonePathology.UI.Test"
-        Title="Acid Wash Orders Dialog" Height="400" Width="550" WindowStyle="ToolWindow" WindowStartupLocation="CenterScreen">
+        Title="Acid Wash Orders Dialog" Height="400" Width="750" WindowStyle="ToolWindow" WindowStartupLocation="CenterScreen">
     <Grid>
+        <Grid.Resources>
+            <Color x:Key="NormalColor">#e5fee7</Color>
+            <SolidColorBrush x:Key="NormalBrush" Color="{StaticResource NormalColor}" />
+
+            <Color x:Key="WarningColor">#fff697</Color>
+            <SolidColorBrush x:Key="WarningBrush" Color="{StaticResource WarningColor}" />
+
+            <Color x:Key="CriticalColor">#f8b3be</Color>
+            <SolidColorBrush x:Key="CriticalBrush" Color="{StaticResource CriticalColor}" />
+        </Grid.Resources>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
@@ -14,12 +24,41 @@
             <RowDefinition Height="Auto"></RowDefinition>
         </Grid.RowDefinitions>
         <ListView Name="ListViewAcidWashList" Grid.Column="0" Grid.Row="0" Margin="5,5,5,5" ItemsSource="{Binding Path=AcidWashList}" FontSize="12" HorizontalAlignment="Stretch" MouseDoubleClick="ListViewAcidWashList_MouseDoubleClick">
+            <ListView.ItemContainerStyle>
+                <Style TargetType="ListViewItem">
+                    <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding State}" Value="Normal">
+                            <Setter Property="Background">
+                                <Setter.Value>
+                                    <SolidColorBrush Color="{StaticResource NormalColor}"/>
+                                </Setter.Value>
+                            </Setter>
+                        </DataTrigger>
+                        <DataTrigger Binding="{Binding State}" Value="Warning">
+                            <Setter Property="Background">
+                                <Setter.Value>
+                                    <SolidColorBrush Color="{StaticResource WarningColor}"/>
+                                </Setter.Value>
+                            </Setter>
+                        </DataTrigger>
+                        <DataTrigger Binding="{Binding State}" Value="Critical">
+                            <Setter Property="Background">
+                                <Setter.Value>
+                                    <SolidColorBrush Color="{StaticResource CriticalColor}"/>
+                                </Setter.Value>
+                            </Setter>
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </ListView.ItemContainerStyle>
             <ListView.View>
                 <GridView AllowsColumnReorder="True" ColumnHeaderToolTip="Case List">
                     <GridViewColumn DisplayMemberBinding="{Binding Path=ReportNo}" Header="Report No" Width="85" />
-                    <GridViewColumn DisplayMemberBinding="{Binding Path=OrderDate, Converter={StaticResource ShortDateConverter}}" Header="Order Date" Width="90"/>
+                    <GridViewColumn DisplayMemberBinding="{Binding Path=OrderTime, Converter={StaticResource MilitaryDateTimeConverter}}" Header="Order Time" Width="110"/>
                     <GridViewColumn DisplayMemberBinding="{Binding Path=PatientName}" Header="Patient Name" Width="150"/>
                     <GridViewColumn DisplayMemberBinding="{Binding Path=Accepted}" Header="Accepted" Width="90"/>
+                    <GridViewColumn DisplayMemberBinding="{Binding Path=Comment}" Header="Comment" Width="200"/>
                 </GridView>
             </ListView.View>
         </ListView>
