--- a/YellowstonePathology/UI/Test/AcidWashResultDialog.xaml
+++ b/YellowstonePathology/UI/Test/AcidWashResultDialog.xaml
@@ -28,6 +28,7 @@
                     <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="*"></RowDefinition>
                     <RowDefinition Height="Auto"></RowDefinition>
                 </Grid.RowDefinitions>
@@ -37,12 +38,16 @@
                 <TextBlock Grid.Column="0" Grid.Row="1" Margin="5,3,0,0">                    
                     <Hyperlink Click="HyperLinkPrintLabel_Click">Print Label</Hyperlink>
                 </TextBlock>
-                
+
                 <TextBlock Grid.Column="0" Grid.Row="2" Margin="5,3,0,0">                    
+                    <Hyperlink Click="HyperLinkQNS_Click">QNS</Hyperlink>
+                </TextBlock>
+
+                <TextBlock Grid.Column="0" Grid.Row="3" Margin="5,3,0,0">                    
                     <Hyperlink Click="HyperLinkAcceptResults_Click">Accept Results</Hyperlink>
                 </TextBlock>
 
-                <TextBlock Grid.Column="0" Grid.Row="4" Margin="5,3,0,0">                    
+                <TextBlock Grid.Column="0" Grid.Row="5" Margin="5,3,0,0">                    
                     <Hyperlink Click="HyperLinkUnacceptResults_Click">UnAccept Results</Hyperlink>
                 </TextBlock>
 
