--- a/YellowstonePathology/UI/Login/Receiving/TaskOrderPage.xaml
+++ b/YellowstonePathology/UI/Login/Receiving/TaskOrderPage.xaml
@@ -31,6 +31,8 @@
                             <RowDefinition Height="Auto"></RowDefinition>
                             <RowDefinition Height="Auto"></RowDefinition>
                             <RowDefinition Height="Auto"></RowDefinition>
+                            <RowDefinition Height="Auto"></RowDefinition>
+                            <RowDefinition Height="Auto"></RowDefinition>
                         </Grid.RowDefinitions>
 
                         <TextBlock Grid.Column="0" Grid.Row="0" Margin="2,2,2,2" FontWeight="Bold" HorizontalAlignment="Right">Description:</TextBlock>
@@ -61,19 +63,25 @@
                             <TextBox Grid.Column="2" Margin="2,2,2,2" Text="{Binding Path=ShipToZip}"/>
                         </Grid>
 
-                        <TextBlock Grid.Column="0" Grid.Row="6" Margin="2,2,2,2" FontWeight="Bold" HorizontalAlignment="Right">FedEx Tracking No:</TextBlock>
-                        <TextBox Grid.Column="1" Grid.Row="6" Margin="2,2,2,2" Text="{Binding Path=TrackingNumber}"/>
+                        <TextBlock Grid.Column="0" Grid.Row="6" Margin="2,2,2,2" FontWeight="Bold" HorizontalAlignment="Right" IsEnabled="False">Phone Number:</TextBlock>
+                        <TextBox Grid.Column="1" Grid.Row="6" Margin="2,2,2,2" Text="{Binding Path=ShipToPhone}"/>
                         
-                        <TextBlock Grid.Column="0" Grid.Row="7" Margin="2,2,2,2" FontWeight="Bold" HorizontalAlignment="Right">Assigned To:</TextBlock>
-                        <ComboBox Name="ComboBoxTaskAssignment" Grid.Column="1" Grid.Row="7" Margin="2,2,2,2" SelectedValue="{Binding Path=AssignedTo}"
+                        <TextBlock Grid.Column="0" Grid.Row="7" Margin="2,2,2,2" FontWeight="Bold" HorizontalAlignment="Right" IsEnabled="False">Payment Type:</TextBlock>
+                        <TextBox Grid.Column="1" Grid.Row="7" Margin="2,2,2,2" Text="{Binding Path=PaymentType}"/>
+                        
+                        <TextBlock Grid.Column="0" Grid.Row="8" Margin="2,2,2,2" FontWeight="Bold" HorizontalAlignment="Right">FedEx Tracking No:</TextBlock>
+                        <TextBox Grid.Column="1" Grid.Row="8" Margin="2,2,2,2" Text="{Binding Path=TrackingNumber}"/>
+                        
+                        <TextBlock Grid.Column="0" Grid.Row="9" Margin="2,2,2,2" FontWeight="Bold" HorizontalAlignment="Right">Assigned To:</TextBlock>
+                        <ComboBox Name="ComboBoxTaskAssignment" Grid.Column="1" Grid.Row="9" Margin="2,2,2,2" SelectedValue="{Binding Path=AssignedTo}"
                                 ItemsSource="{Binding DataContext.TaskAssignmentList, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type UserControl}}}">
                         </ComboBox>
 
-                        <TextBlock Grid.Column="0" Grid.Row="8" Margin="2,2,2,2" FontWeight="Bold" HorizontalAlignment="Right">Acknowledged By:</TextBlock>
-                        <TextBlock Grid.Column="1" Grid.Row="8" Margin="2,2,2,2" Text="{Binding Path=AcknowledgedByInitials}" />
+                        <TextBlock Grid.Column="0" Grid.Row="10" Margin="2,2,2,2" FontWeight="Bold" HorizontalAlignment="Right">Acknowledged By:</TextBlock>
+                        <TextBlock Grid.Column="1" Grid.Row="10" Margin="2,2,2,2" Text="{Binding Path=AcknowledgedByInitials}" />
 
-                        <TextBlock Grid.Column="0" Grid.Row="9" Margin="2,2,2,2" FontWeight="Bold" HorizontalAlignment="Right">Acknowledged Date:</TextBlock>
-                        <TextBlock Grid.Column="1" Grid.Row="9" Margin="2,2,2,2" Text="{Binding Path=AcknowledgedDate}" />
+                        <TextBlock Grid.Column="0" Grid.Row="11" Margin="2,2,2,2" FontWeight="Bold" HorizontalAlignment="Right">Acknowledged Date:</TextBlock>
+                        <TextBlock Grid.Column="1" Grid.Row="11" Margin="2,2,2,2" Text="{Binding Path=AcknowledgedDate}" />
 
                         <StackPanel Grid.Column="2" Grid.Row="0" Grid.RowSpan="4" Margin="10,10,10,10">
 
