--- a/YellowstonePathology/UI/Login/Receiving/TaskOrderPage.xaml
+++ b/YellowstonePathology/UI/Login/Receiving/TaskOrderPage.xaml
@@ -70,7 +70,7 @@
                         <TextBox Grid.Column="1" Grid.Row="7" Margin="2,2,2,2" Text="{Binding Path=PaymentType}"/>
                         
                         <TextBlock Grid.Column="0" Grid.Row="8" Margin="2,2,2,2" FontWeight="Bold" HorizontalAlignment="Right">FedEx Tracking No:</TextBlock>
-                        <TextBox Grid.Column="1" Grid.Row="8" Margin="2,2,2,2" Text="{Binding Path=TrackingNumber}"/>
+                        <TextBox Grid.Column="1" Grid.Row="8" Margin="2,2,2,2" Text="{Binding Path=TrackingNumber}" IsEnabled="False"/>
                         
                         <TextBlock Grid.Column="0" Grid.Row="9" Margin="2,2,2,2" FontWeight="Bold" HorizontalAlignment="Right">Assigned To:</TextBlock>
                         <ComboBox Name="ComboBoxTaskAssignment" Grid.Column="1" Grid.Row="9" Margin="2,2,2,2" SelectedValue="{Binding Path=AssignedTo}"
@@ -85,18 +85,22 @@
 
                         <StackPanel Grid.Column="2" Grid.Row="0" Grid.RowSpan="4" Margin="10,10,10,10">
 
-                            <TextBlock Grid.Column="2" Grid.Row="1" Margin="2,2,2,2">
+                            <TextBlock Margin="2,2,2,2">
                                 <Hyperlink Click="HyperLinkGetTrackingNumber_Click" Tag="{Binding Path=.}">Get Tracking Number</Hyperlink>
                             </TextBlock>
                             
-                            <TextBlock Grid.Column="2" Grid.Row="1" Margin="2,2,2,2">
+                            <TextBlock Margin="2,2,2,2">
                                 <Hyperlink Click="HyperLinkPrintLabel_Click" Tag="{Binding Path=.}">Print Label</Hyperlink>
                             </TextBlock>
 
-                            <TextBlock Grid.Column="2" Grid.Row="1" Margin="2,2,2,2">
+                            <TextBlock Margin="2,2,2,2">
                                 <Hyperlink Click="HyperLinkCancelShipment_Click" Tag="{Binding Path=.}">CancelShipment</Hyperlink>
                             </TextBlock>
 
+                            <TextBlock Margin="2,2,2,2">
+                                <Hyperlink Click="HyperLinkDelete_Click" Tag="{Binding Path=.}">Delete</Hyperlink>
+                            </TextBlock>
+                            
                         </StackPanel>
 
                     </Grid>
@@ -217,6 +221,9 @@
                 <TextBlock Grid.Column="0" Grid.Row="0" Margin="0,3,0,0" FontWeight="Bold" FontSize="14">Options</TextBlock>								
                 <TextBlock Grid.Column="0" Grid.Row="1" Margin="5,3,0,5">
                     <Hyperlink Click="HyperLinkSendToNeogenomics_Click">Send to Neogenomics</Hyperlink>
+                </TextBlock>
+                <TextBlock Grid.Column="0" Grid.Row="2" Margin="5,3,0,5">
+                    <Hyperlink Click="HyperLinkSendAddGenericTask_Click">Add Generic Task</Hyperlink>
                 </TextBlock>
                 <TextBlock Grid.Column="0" Grid.Row="5" Margin="5,3,0,5" VerticalAlignment="Bottom">
                     <Hyperlink Click="HyperlingPrintTaskOrder_Click">Print (1 copy)</Hyperlink>
