--- a/YellowstonePathology/UI/Login/Receiving/ClientOrderSelectionPage.xaml
+++ b/YellowstonePathology/UI/Login/Receiving/ClientOrderSelectionPage.xaml
@@ -30,6 +30,7 @@
 			<ListView Name="ListViewClientOrders" Margin="10" Grid.Column="0" Grid.Row="0" ItemsSource="{Binding Path=ClientOrderCollection}">
 				<ListView.View>
 					<GridView AllowsColumnReorder="True" ColumnHeaderToolTip="Client Order List">
+                        <GridViewColumn DisplayMemberBinding="{Binding Path=OrderStatus}" Header="Status" Width="100"/>
 						<GridViewColumn DisplayMemberBinding="{Binding Path=PLastName}" Header="Last Name" Width="110"/>
 						<GridViewColumn DisplayMemberBinding="{Binding Path=PFirstName}" Header="First Name" Width="110"/>
 						<GridViewColumn DisplayMemberBinding="{Binding Path=OrderDate, Converter={StaticResource ShortDateConverter}}" Header="Order Date" Width="150"/>
